# sebek-os

./: .gitignore  README.md
hypr/: hyprctl.sh  hyprland.conf  settings.json
nwg-panel/: menu-start.css
waybar/: hyproptions.py
waybar/data/audiowidgets/MPRISPopup/: CMakeLists.txt  compile_commands.json
waybar/data/audiowidgets/MPRISPopup/.cache/clangd/index/: MPRISApplication.cc.9CC4EA30BDFC8F9E.idx  MPRISApplication.hpp.88BA2FAB28F3A3D2.idx  MPRISPopup.cc.B36E4154DE97DE13.idx  MPRISPopup.cc.DC94F10B617C2582.idx  MPRISPopup.cc.DD2971AD2C09DFDD.idx  MPRISPopup.hpp.2E3FB1BBBF06372E.idx  MPRISPopup.hpp.8F3C863064F7E875.idx  MPRISPopup.hpp.9F10E06F05C450CC.idx  main.cc.1D185EE73AAE931D.idx  mpris-down.cc.50B09E70521F65D4.idx  mpris-up.cc.4030EF99D32A3201.idx
waybar/data/audiowidgets/MPRISPopup/include/: MPRISApplication.cc  MPRISApplication.hpp
waybar/data/audiowidgets/MPRISPopup/libraries/MPRISPopup/: CMakeLists.txt  MPRISPopup.cc  MPRISPopup.hpp
waybar/data/audiowidgets/MPRISPopup/src/: mpris-down.cc  mpris-up.cc
waybar/data/audiowidgets/abajo/: mpris-down  mpris-down.cpp  mpris-down.py  mpris-down.sh  mprislauncher-down.sh
waybar/data/audiowidgets/arriba/: CODIGO CON IMAGEN  mpris-up  mpris-up.cpp  mpris-up.py  mpris-up.sh  mprislauncher-up.sh
waybar/themes/: modulesbottom.json  modulesbottomcenter.json  modulestop.json  modulestopcenter.json  modulesvertical.json
